Fix to long modals on mobile

--- a/src/components/styles/Modal.css
+++ b/src/components/styles/Modal.css
@@ -17,7 +17,7 @@
   background-color: rgba(0, 0, 0, 0.9);
   border-radius: 5px;
   width: calc(100vw - 4rem);
-  height: calc(100vh - 4rem);
+  min-height: calc(100vh - 4rem);
 }
 
 @media (max-width: 550px) {
@@ -26,7 +26,7 @@
     padding: 1rem;
     margin: 0;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
   }
 }
 
